# NexusQuery

./: .gitignore  Dockerfile  README.md  cmd.md  index.html  k.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
api/middleware/: auth.py  dependencies.py  rate_limiter.py  request_id.py  schemas.py
api/routes/: ask.py  health.py  ingest.py
config/: settings.py
crawler/: async_crawler.py  checkpoint.py  models.py  url_filter.py
db/: models_sql.py  mongo_client.py  mysql_client.py
db/migrations/: 001_init.sql
ingestion/: chunker.py  embedder.py  vector_store.py
monitoring/: audit_log.py  langsmith_tracer.py  metrics.py
rag/: confidence.py  fallback.py  guardrails.py  pipeline.py  prompt_templates.py
scripts/: crawl_and_index.py  eval_retrieval.py
tests/: conftest.py  test_api.py  test_chunker.py  test_crawler.py  test_fallback.py  test_guardrails.py  test_rag_pipeline.py
